--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
@@ -107,7 +107,8 @@
                         android:layout_height="20dp"
                         android:layout_weight="3"
                         android:background="@null"
-                        android:fontFamily="@font/nanum_bold"
+                        android:textColorLink="#000000"
+                        android:hint="********"
                         android:inputType="textPassword"
                         android:textColor="#1C2320"
                         android:textSize="15dp" />
