--- a/Woong_Android/app/src/main/res/layout/activity_consumer_login.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_login.xml
@@ -40,6 +40,7 @@
                         android:layout_width="180dp"
                         android:id="@+id/id_consume_login"
                         android:layout_height="30dp"
+                        android:maxLines="1"
                         android:layout_marginLeft="104dp"
                         android:layout_centerVertical="true"
                         android:background="#FFFFFF"
@@ -59,6 +60,7 @@
                         android:layout_width="180dp"
                         android:id="@+id/pwd_consume_login"
                         android:layout_height="30dp"
+                        android:maxLines="1"
                         android:layout_marginLeft="104dp"
                         android:layout_centerVertical="true"
                         android:background="#FFFFFF"
