--- a/Woong_Android/app/src/main/res/layout/item_market_mymarket.xml
+++ b/Woong_Android/app/src/main/res/layout/item_market_mymarket.xml
@@ -2,17 +2,26 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="130dp">
+    android:layout_height="135dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp">
+        android:layout_marginLeft="5dp">
+
         <ImageView
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
             android:id="@+id/iv_market_market"
             android:layout_width="130dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
             android:background="@color/colorPastel"/>
+        <ImageView
+            android:id="@+id/iv_mymarket_leaf"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:src="@drawable/market_lanking_leaf"/>
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
