--- a/Woong_Android/app/src/main/res/layout/item_payment_myproduct.xml
+++ b/Woong_Android/app/src/main/res/layout/item_payment_myproduct.xml
@@ -2,82 +2,215 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="127dp">
     <LinearLayout
-        android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="70dp"
+            android:layout_width="70dp"
+            android:layout_height="60dp"
             android:scaleType="centerCrop"
-            android:background="#bcbcbc"/>
+            android:background="#bcbcbc"
+            android:layout_marginLeft="15dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
         <RelativeLayout
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="70dp">
             <TextView
+                android:id="@+id/parentheses_open_payment_marketname"
+                android:fontFamily="@font/nanum_bold"
+                android:textSize="15dp"
+                android:textColor="#707070"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="["/>
+            <TextView
+                android:layout_toRightOf="@+id/parentheses_open_payment_marketname"
+                android:fontFamily="@font/nanum_bold"
+                android:textSize="15dp"
+                android:textColor="#707070"
                 android:id="@+id/name_mknpd_payment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="[현듀 마켓] 왕감장"/>
+                android:text=""/>
             <TextView
-                android:layout_alignParentBottom="true"
+                android:id="@+id/parentheses_end_payment_marketname"
+                android:fontFamily="@font/nanum_bold"
+                android:textSize="15dp"
+                android:textColor="#707070"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="배송비 2500원"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
-            <RelativeLayout
-                android:layout_alignParentRight="true"
-                android:layout_width="100dp"
-                android:layout_height="match_parent">
-                <RelativeLayout
-                    android:layout_alignParentBottom="true"
+                android:layout_toRightOf="@+id/name_mknpd_payment"
+                android:text="]"/>
+            <TextView
+                android:id="@+id/parentheses_open_number"
+                android:fontFamily="@font/nanum_bold"
+                android:textSize="15dp"
+                android:textColor="#707070"
+                android:text="("
+                android:layout_toRightOf="@+id/parentheses_end_payment_marketname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_payment_num"
+                android:fontFamily="@font/nanum_bold"
+                android:textSize="15dp"
+                android:textColor="#707070"
+                android:text=""
+                android:layout_toRightOf="@+id/parentheses_open_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:fontFamily="@font/nanum_bold"
+                android:textSize="15dp"
+                android:textColor="#707070"
+                android:text="개)"
+                android:layout_toRightOf="@+id/tv_payment_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_payment_cost"
+                android:layout_below="@+id/name_mknpd_payment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nanum_regular"
+                android:textSize="13dp"
+                android:textColor="#707070"
+                android:layout_marginTop="10dp"
+                android:text="가격"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/nanum_regular"
+                android:textSize="13dp"
+                android:textColor="#707070"
+                android:layout_below="@+id/name_mknpd_payment"
+                android:text=":"
+                android:layout_marginLeft="46dp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@+id/name_mknpd_payment"
+                android:layout_marginLeft="59dp"
+                android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nanum_regular"
+                android:textSize="13dp"
+                android:textColor="#707070"
+                android:text=""/>
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="수량"/>
-                    <TextView
-                        android:layout_alignParentBottom="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2개"/>
-                </RelativeLayout>
-                <RelativeLayout
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="13dp"
+                    android:textColor="#707070"
+                    android:text="원"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nanum_regular"
+                android:textSize="13dp"
+                android:textColor="#707070"
+                android:text="("/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="13dp"
+                    android:textColor="#707070"
+                    android:text=""/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="13dp"
+                    android:textColor="#707070"
+                    android:text="kg)"/>
+            </LinearLayout>
+            <TextView
+                android:layout_below="@+id/tv_payment_cost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nanum_regular"
+                android:textSize="13dp"
+                android:textColor="#707070"
+                android:layout_marginTop="5dp"
+                android:text="배송비"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/nanum_regular"
+                android:textSize="13dp"
+                android:textColor="#707070"
+                android:layout_below="@+id/tv_payment_cost"
+                android:text=":"
+                android:layout_marginLeft="46dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/nanum_regular"
+                android:textSize="13dp"
+                android:textColor="#707070"
+                android:layout_below="@+id/tv_payment_cost"
+                android:text="2500원"
+                android:layout_marginLeft="59dp"/>
+
+                <TextView
+                    android:id="@+id/tv_total_cost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp">
-                    <TextView
-                        android:layout_alignParentRight="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="총 금액"/>
-                    <TextView
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="14000원"/>
-                </RelativeLayout>
-
-            </RelativeLayout>
+                    android:layout_marginBottom="10dp"
+                    android:gravity="end"
+                    android:text="총 금액"
+                    android:fontFamily="@font/nanum_bold"
+                    android:textSize="13dp"
+                    android:layout_marginRight="15dp"/>
 
         </RelativeLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:orientation="horizontal"
+            android:layout_marginRight="15dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_gravity="end"
+                    android:textColor="#1C2320"
+                    android:fontFamily="@font/nanum_bold"
+                    android:textSize="15dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="원"
+                android:layout_gravity="end"
+                android:textColor="#1C2320"
+                android:fontFamily="@font/nanum_bold"
+                android:textSize="15dp"/>
+        </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
     <View
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#ebebeb"/>
+        android:layout_height="0.5dp"
+        android:background="#ADADAD"/>
 
 
 
