--- a/Woong_Android/app/src/main/res/layout/item_photo_review.xml
+++ b/Woong_Android/app/src/main/res/layout/item_photo_review.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="90dp"
-    android:layout_height="80dp">
-    <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="112dp"
+    android:layout_height="98dp"
+    android:layout_margin="5dp">
 
-        android:layout_width="90dp"
-        android:layout_height="80dp">
         <RelativeLayout
             android:layout_centerInParent="true"
-            android:layout_width="80dp"
-            android:layout_height="70dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/img_photo_review"
                 android:layout_width="match_parent"
@@ -18,12 +16,11 @@
             <ImageView
                 android:id="@+id/btn_cancel_photo"
                 android:layout_alignParentRight="true"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@color/colorPastel" />
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/alarm_reviewing_x" />
 
         </RelativeLayout>
 
-    </RelativeLayout>
 
 </RelativeLayout>
