--- a/Woong_Android/app/src/main/res/layout/item_product_home.xml
+++ b/Woong_Android/app/src/main/res/layout/item_product_home.xml
@@ -2,12 +2,12 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
     <LinearLayout
         android:background="@drawable/rv_item_image"
-        android:layout_width="160dp"
-        android:layout_height="220dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="244dp"
         android:elevation="3dp"
         android:layout_centerInParent="true"
         android:orientation="vertical">
@@ -27,10 +27,9 @@
             <ImageView
                 android:id="@+id/btn_favorite_home"
                 android:layout_alignParentBottom="true"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="10dp"
-                android:background="#000000"/>
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/my_pick_heart"/>
         </RelativeLayout>
         <RelativeLayout
             android:gravity="center"
