--- a/Woong_Android/app/src/main/res/layout/item_sellermarket_product.xml
+++ b/Woong_Android/app/src/main/res/layout/item_sellermarket_product.xml
@@ -2,11 +2,12 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
     <LinearLayout
         android:background="@drawable/rv_item_image"
-        android:layout_width="160dp"
-        android:layout_height="220dp"
+        android:layout_width="match_parent"
+        android:layout_height="224dp"
         android:layout_marginBottom="20dp"
         android:elevation="3dp"
         android:layout_centerInParent="true"
@@ -23,36 +24,48 @@
             <ImageView
                 android:id="@+id/btn_bookmark_sellermarketproduct"
                 android:layout_alignParentBottom="true"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="10dp"
-                android:background="#000000"/>
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/my_pick_heart"/>
 
         </RelativeLayout>
         <RelativeLayout
+            android:layout_marginTop="19dp"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/sign"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="["/>
-            <TextView
-                android:layout_toRightOf="@+id/sign"
-                android:id="@+id/item_marketname_sellermarket_product"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="현듀마켓"/>
-
-
-            <TextView
-                android:layout_toRightOf="@+id/item_marketname_sellermarket_product"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="]"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/sign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="["
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="14dp"
+                    android:textColor="#ADADAD"/>
+                <TextView
+                    android:layout_toRightOf="@+id/sign"
+                    android:id="@+id/item_marketname_sellermarket_product"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="14dp"
+                    android:textColor="#ADADAD"/>
+                <TextView
+                    android:layout_toRightOf="@+id/item_marketname_sellermarket_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="]"
+                    android:fontFamily="@font/nanum_regular"
+                    android:textSize="14dp"
+                    android:textColor="#ADADAD"/>
+            </LinearLayout>
         </RelativeLayout>
 
 
@@ -60,16 +73,22 @@
             android:id="@+id/item_productname_sellermarket_product"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="돼지 감자"/>
+            android:fontFamily="@font/nanum_bold"
+            android:textSize="16dp"
+            android:textColor="#707070"
+            android:text=""/>
         <TextView
             android:id="@+id/cost_per_unit_sellermarket_product"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1kg당 6000원"/>
+            android:text=""
+            android:fontFamily="@font/nanum_bold"
+            android:textSize="12dp"
+            android:textColor="#ADADAD"/>
     </LinearLayout>
 </RelativeLayout>
