--- a/Woong_Android/app/src/main/res/layout/fragment_bookmark_market.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_bookmark_market.xml
@@ -3,26 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp">
-        <ImageView
-            android:id="@+id/iv_star_mymarket"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/colorPrimaryDark"/>
-        <TextView
-            android:id="@+id/tv_bookmark_mymarket"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_toRightOf="@+id/iv_star_mymarket"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:text="즐겨찾기"/>
-    </RelativeLayout>
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_bookmark_mymarket"
         android:layout_width="match_parent"
