충돌 해결. 위치 수정 애니메이션 추가. 홈 메인에서 검색 완성.

--- a/Woong_Android/app/src/main/res/layout/activity_change_location_search.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_change_location_search.xml
@@ -35,6 +35,8 @@
         android:layout_width="325dp"
         android:layout_height="35dp"
         android:layout_gravity="center_horizontal"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="@drawable/setting_location_2_search_bar">
         <ImageView
             android:layout_width="20dp"
