--- a/Woong_Android/app/src/main/res/layout/activity_login.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/green_round_button"
                 android:layout_centerInParent="true"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="판매자로 로그인"
                 android:textColor="#FFFFFF"/>
             <Button
@@ -48,7 +48,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/green_round_button"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="소비자로 로그인"
                 android:textColor="#FFFFFF"/>
         </LinearLayout>
