--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:fontFamily="@font/nanum_bold"
                 android:textColor="#1C2320"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:layout_marginTop="14dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
                 android:layout_centerInParent="true">
                 <TextView
                     android:fontFamily="@font/nanum_bold"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#707070"
@@ -70,7 +70,7 @@
                         android:layout_weight="1.3" />
                     <TextView
                         android:fontFamily="@font/nanum_bold"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         android:textColor="#707070"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
                         android:layout_weight="1" />
                     <TextView
                         android:fontFamily="@font/nanum_bold"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         android:textColor="#707070"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
                         android:layout_weight="1" />
                     <TextView
                         android:fontFamily="@font/nanum_bold"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         android:textColor="#707070"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -111,7 +111,7 @@
                     android:layout_marginTop="15dp">
                     <TextView
                         android:fontFamily="@font/nanum_bold"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         android:textColor="#707070"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -143,7 +143,7 @@
                 android:layout_width="188dp"
                 android:layout_height="48dp"
                 android:fontFamily="@font/nanum_bold"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="다음"
                 android:layout_marginTop="100dp"
                 android:layout_gravity="center_horizontal"
