--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:fontFamily="@font/nanum_bold"
                 android:textColor="#1C2320"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:layout_marginTop="14dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
                         android:fontFamily="@font/nanum_bold"
                         android:text="이메일"
                         android:textColor="#707070"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
 
                     <EditText
                         android:hint="woong@woong.com"
@@ -78,7 +78,7 @@
                         android:fontFamily="@font/nanum_bold"
                         android:inputType="textEmailAddress"
                         android:textColor="#1C2320"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <View
@@ -99,7 +99,7 @@
                         android:fontFamily="@font/nanum_bold"
                         android:text="비밀번호"
                         android:textColor="#707070"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
 
                     <EditText
 
@@ -111,8 +111,7 @@
                         android:textColorLink="#000000"
                         android:hint="********"
                         android:inputType="textPassword"
-
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <View
@@ -133,7 +132,7 @@
                         android:fontFamily="@font/nanum_bold"
                         android:text="전화번호"
                         android:textColor="#707070"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
 
                     <EditText
                         android:hint="01012345678"
@@ -145,7 +144,7 @@
                         android:fontFamily="@font/nanum_bold"
                         android:inputType="phone"
                         android:textColor="#1C2320"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <View
@@ -161,10 +160,10 @@
             <Button
                 android:id="@+id/btn_next_consumer_join2"
                 android:layout_centerInParent="true"
-                android:layout_width="188dp"
+                android:layout_width="188sp"
                 android:layout_height="48dp"
                 android:fontFamily="@font/nanum_bold"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="다음"
                 android:layout_marginTop="100dp"
                 android:layout_gravity="center_horizontal"
