--- a/Woong_Android/app/src/main/res/layout/activity_consumer_terms.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_terms.xml
@@ -24,7 +24,7 @@
             <TextView
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/nanum_bold"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="#1C2320"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
             android:layout_marginHorizontal="12dp">
             <TextView
                 android:fontFamily="@font/nanum_bold"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:textColor="#707070"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,11 +66,44 @@
                 android:background="@drawable/draw_edge"
                 android:padding="5dp">
                 <TextView
-                    android:textSize="12dp"
+                    android:textSize="12sp"
                     android:fontFamily="@font/nanum_regular"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="웅아감자팔자 서비스 및 제품을 이용해 주셔서 감사 합니다. 본 약관은 다양한 웅감 서비스의 이용과 관련하여 웅아감자팔자 서비스를 제공하는 웅감 주식회사(이하 ‘웅감’)와 이를 이용하는 웅감 서비스"
+                    android:text="제1조(목적)
+이 약관은 더파머스 회사(전자상거래 사업자)가 운영하는 인터넷사이트 웅감(이하 “웅감”이라 한다)에서 제공하는 전자상거래 관련 서비스(이하 “서비스”라 한다)를 이용함에 있어 컬리와 이용자의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.
+“PC통신, 스마트폰 앱, 무선 등을 이용하는 전자상거래에 대해서도 그 성질에 반하지 않는 한 준용합니다.
+
+제 2조(정의)
+1. “웅감”이란 더파머스 회사가 재화 또는 용역(이하 “재화 등”이라 함)을 이용자에게 제공하기 위하여 컴퓨터 등 정보통신설비를 이용하여 재화 등을 거래할 수 있도록 설정한 가상의 영업장을 말하며, 아울러 서비스를 운영하는 사업자의 의미로도 사용합니다.
+2. “이용자”란 “웅감”에 접속하여 이 약관에 따라 “웅감”이 제공하는 서비스를 받는 회원 및 비회원을 말합니다.
+3. ‘회원’이라 함은 “웅감”에 (삭제) 회원등록을 한 자로서, 계속적으로 “웅감”이 제공하는 서비스를 이용할 수 있는 자를 말합니다. ‘회원’에게는 다음과 같은 “웅감”의 물류정책이 적용됩니다.
+1) 회원 중 배송지가 더파머스가 직접 제공하는 물류 서비스가 아닌 3자 물류 사업자를 통해 배송을 하는 곳인 경우 자동으로 컬리어답터 프로그램 가입에 동의하는 것으로 간주합니다.
+2) 컬리 어답터 프로그램의 약관은 첫 배송 시 배포되는 컬리어답터 안내문에 따릅니다.
+4. ‘비회원’이라 함은 회원에 가입하지 않고 “웅감”이 제공하는 서비스를 이용하는 자를 말합니다. 더파머스가 직접 제공하는 물류서비스가 아닌 3자 물류 사업자를 통해 배송을 하는 곳은 비회원 주문이 불가능합니다.
+
+제 3조(약관 등의 명시와 설명 및 개정)
+1. “웅감”은 이 약관의 내용과 상호 및 대표자 성명, 영업소 소재지 주소(소비자의 불만을 처리할 수 있는 곳의 주소를 포함), 전화번호.모사전송번호.전자우편주소, 사업자등록번호, 통신판매업 신고번호, 개인정보 관리책임자등을 이용자가 쉽게 알 수 있도록 웅감의 초기 서비스화면(전면)에 게시합니다. 다만, 약관의 내용은 이용자가 연결화면을 통하여 볼 수 있도록 할 수 있습니다.
+2. “웅감”은 이용자가 약관에 동의하기에 앞서 약관에 정하여져 있는 내용 중 청약철회.배송책임.환불조건 등과 같은 중요한 내용을 이용자가 이해할 수 있도록 별도의 연결화면 또는 팝업화면 등을 제공하여 이용자의 확인을 구하여야 합니다.
+3. “웅감”은 [전자상거래 등에서의 소비자보호에 관한 법률], [약관의 규제에 관한 법률], [전자문서 및 전자거래기본법], [전자금융거래법], [전자서명법], [정보통신망 이용촉진 및 정보보호 등에 관한 법률], [방문판매 등에 관한 법률], [소비자기본법] 등 관련 법을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
+4. “웅감”이 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행약관과 함께 몰의 초기화면에 그 적용일자 7일 이전부터 적용일자 전일까지 공지합니다. 다만, 이용자에게 불리하게 약관내용을 변경하는 경우에는 최소한 30일 이상의 사전 유예기간을 두고 공지합니다. 이 경우 “웅감”은 개정 전 내용과 개정 후 내용을 명확하게 비교하여 이용자가 알기 쉽도록 표시합니다.
+5. “웅감”이 약관을 개정할 경우에는 그 개정약관은 그 적용일자 이후에 체결되는 계약에만 적용되고 그 이전에 이미 체결된 계약에 대해서는 개정 전의 약관조항이 그대로 적용됩니다. 다만 이미 계약을 체결한 이용자가 개정약관 조항의 적용을 받기를 원하는 뜻을 제 3항에 의한 개정약관의 공지기간 내에 “웅감”에 송신하여 “웅감”의 동의를 받은 경우에는 개정약관 조항이 적용됩니다.
+6. 이 약관에서 정하지 아니한 사항과 이 약관의 해석에 관하여는 전자상거래 등에서의 소비자보호에 관한 법률, 약관의 규제 등에 관한 법률, 공정거래위원회가 정하는 전자상거래 등에서의 소비자 보호지침 및 관계법령 또는 상관례에 따릅니다.
+
+제 4조(서비스의 제공 및 변경)
+1. “웅감”은 다음과 같은 업무를 수행합니다.
+1) 재화 또는 용역에 대한 정보 제공 및 구매계약의 체결
+2) 구매계약이 체결된 재화 또는 용역의 배송
+3) 기타 “웅감”이 정하는 업무
+2. “웅감”은 재화 또는 용역의 품절 또는 기술적 사양의 변경 등의 경우에는 장차 체결되는 계약에 의해 제공할 재화 또는 용역의 내용을 변경할 수 있습니다. 이 경우에는 변경된 재화 또는 용역의 내용 및 제공일자를 명시하여 현재의 재화 또는 용역의 내용을 게시한 곳에 즉시 공지합니다.
+3. “웅감”이 제공하기로 이용자와 계약을 체결한 서비스의 내용을 재화등의 품절 또는 기술적 사양의 변경 등의 사유로 변경할 경우에는 그 사유를 이용자에게 통지 가능한 주소로 즉시 통지합니다.
+4. 전항의 경우 “웅감”은 이로 인하여 이용자가 입은 손해를 배상합니다. 다만 “웅감”이 고의 또는 과실이 없음을 입증하는 경우에는 그러하지 아니합니다.
+
+제 5조(서비스의 중단)
+1. “웅감”은 컴퓨터 등 정보통신설비의 보수점검. 교체 및 고장, 통신의 두절 등의 사유가 발생한 경우에는 서비스의 제공을 일시적으로 중단할 수 있습니다.
+2. “웅감”은 제1항의 사유로 서비스의 제공이 일시적으로 중단됨으로 인하여 이용자 또는 제3자가 입은 손해에 대하여 배상합니다. 단, “웅감”이 고의 또는 과실이 없음을 입증하는 경우에는 그러하지 아니합니다.
+3. 사업종목의 전환, 사업의 포기, 업체 간의 통합 등의 이유로 서비스를 제공할 수 없게 되는 경우에는 “웅감”은 제8조에 정한 방법으로 이용자에게 통지하고 당초 “웅감”에서 제시한 조건에 따라 소비자에게 보상합니다. 다만, “웅감”이 보상기준 등을 고지하지 아니한 경우에는 이용자들의 마일리지 또는 적립금 등을 “웅감”에서 통용되는 통화가치에 상응하는 현물 또는 현금으로 이용자에게 지급합니다.
+"
                     android:textColor="#95989A" />
             </ScrollView>
         </LinearLayout>
@@ -82,7 +115,7 @@
             android:layout_marginHorizontal="15dp">
             <TextView
                 android:fontFamily="@font/nanum_bold"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:textColor="#707070"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -94,11 +127,39 @@
                 android:background="@drawable/draw_edge"
                 android:padding="5dp">
                 <TextView
-                    android:textSize="12dp"
+                    android:textSize="12sp"
                     android:fontFamily="@font/nanum_regular"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="서비스 이용 과정에서 IP 주소, 쿠키, 서비스 이용 기록, 기기정보, 위치정보가 생성되어 수집될 수 있습니다. 구체적으로 1) 서비스 이용 과정에서 이용자에 관한 정보를 정보통신서비스 제공자가"
+                    android:text="1. 웅감은 고객님의 개인정보를 중요시하며, “정보통신망 이용촉진 및 정보보호”에 관한 법률을 준수하고 있습니다. 회사는 개인정보처리방침을 통하여 고객님께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.
+제1조(수집하는 개인정보의 항목)
+1) 회사는 회원가입, 고객 상담, 서비스 신청 및 제공 등을 위해 아래와 같은 개인정보를 수집하고 있습니다.
+2) 회원가입시(필수): 로그인 ID, 비밀번호, 이름, 휴대전화번호, 이메일
+3) 회원가입시(선택): 주소, 성별, 생년월일
+4) 서비스 신청시(필수): 주소, 결제정보, 수취인의 배송지 정보(수취인명, 휴대전화번호, 수취인 주소)
+5) 서비스 신청시(선택): 공동현관번호
+6) 대량주문 문의시: 이름, 연락처, 주소, 이메일
+7) 모바일 사용시: 앱 버전, OS버전
+
+제 2조 개인정보의 수집 및 이용목적
+1. 서비스 이용 과정이나 사업 처리 과정에서 서비스 이용기록, 접속로그, 쿠키, 접속IP, 결제 기록, 불량이용 기록, 광고식별자가 생성되어 수집될 수 있습니다.
+2. 회사는 수집한 개인정보를 다음의 목적을 위해 활용합니다.
+ 1)서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금청산, 콘텐츠 제공, 구매 및 요금 결제, 물품배송 또는 청구지 등 발송, 금융거래 본인 인증 및 금융서비스
+ 2)회원관리
+회원제 서비스 이용에 따른 본인확인, 개인 식별, 불량회원 부정 이용 방지와 비인가 사용 방지,    가입 의사 확인, 연령 확인, 만 14세 미만 아동 개인정보 수집 시 법정 대리인 동의여부 확인, 불 만 처리 등 민원처리, 고지사항 전달
+3)마케팅 및 광고에 활용
+이번트 등 광고성 정보 전달, 접속 빈도 파악 또는 회원의 서비스 이용에 대한 통계
+
+제3조 개인정보 제공
+ 1. 회사는 이용자의 개인정보를 원칙적으로 외부에 제공하지 않습니다. 다만, 아래의 경우에는 예외로 합니다.
+ 1)이용자들이 사전에 동의한 경우
+ 2)법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우
+제 4조 이용자 및 법정대리인의 권리와 그 행사방법
+1. 이용자는 언제든지 등록되어 있는 자신의 개인정보를 조회하거나 수정할 수 있으며 가입해 지를 요청할 수도 있습니다.
+2.이용자들의 개인정보 조회, 수정을 위해서는 “개인정보변경”을 가입해지(동의철회)를 위해서는 “회원탈퇴”를 클릭하여 본인 확인 절차를 거치신 후 직접 열람, 정정 또는 탙퇴가 가능합니다.
+3.혹은 개인정보관리책임자에게 서면, 전화 또는 이메일로 연락하시면 지체없이 조치하겠습니다.
+4.귀하가 개인정보의 오류에 대해 정정을 요청하신 경우에는 정정을 완료하기 전까지 당해 개인정보를 이용 또는 제공하지 않습니다.
+"
                     android:textColor="#95989A" />
             </ScrollView>
         </LinearLayout>
@@ -111,7 +172,7 @@
             android:layout_marginVertical="15dp">
             <TextView
                 android:fontFamily="@font/nanum_bold"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:textColor="#707070"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -123,11 +184,35 @@
                 android:background="@drawable/draw_edge"
                 android:padding="5dp">
                 <TextView
-                    android:textSize="12dp"
+                    android:textSize="12sp"
                     android:fontFamily="@font/nanum_regular"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="위치정보 이용약관에 동의하시면, 위치를 활용한 광고 정보 수신 등을 포함하는 프리에이터 위치기반 서비스를 이용할 수 있습니다. 제 1 조 (목적)"
+                    android:text="제 1조(위치정보)
+1. 이용자는 “웅감”이 정한 가입 양식에 따라 회원정보를 기입한 후 이 약관에 동의한다는 의사표시를 함으로서 회원가입을 신청합니다.
+2. “웅감”은 제1항과 같이 회원으로 가입할 것을 신청한 이용자 중 다음 각 호에 해당하지 않는 한 회원으로 등록합니다.
+3. 회원가입계약의 성립 시기는 “웅감”의 승낙이 회원에게 도달한 시점으로 합니다.
+4. 회원은 회원가입 시 등록한 사항에 변경이 있는 경우, 상당한 기간 이내에 “웅감”에 대하여 회원정보 수정 등의 방법으로 그 변경사항을 알려야 합니다.
+
+제 2조(위치정보 등록 및 회원 탈퇴 등)
+1. 회원은 “웅감”에 언제든지 탈퇴를 요청할 수 있으며 “웅감”은 즉시 회원탈퇴를 처리합니다.
+2. 회원이 다음 각 호의 사유에 해당하는 경우, “웅감”은 회원자격을 제한 및 정지시킬 수 있습니다.
+3. “웅감”이 회원 자격을 제한.정지 시킨 후, 동일한 행위가 2회 이상 반복되거나 30일 이내에 그 사유가 시정되지 아니하는 경우 “웅감”은 회원자격을 상실시킬 수 있습니다.
+4. “웅감”이 회원자격을 상실시키는 경우에는 회원등록을 말소합니다. 이 경우 회원에게 이를 통지하고, 회원등록 말소 전에 최소한 30일 이상의 기간을 정하여 소명할 기회를 부여합니다.
+
+제 3조(회원에 대한 통지)
+1. “웅감”이 회원에 대한 통지를 하는 경우, 회원이 “웅감”과 미리 약정하여 지정한 전자우편 주소로 할 수 있습니다.
+2. “웅감”은 불특정다수 회원에 대한 통지의 경우 1주일이상 “웅감” 게시판에 게시함으로서 개별 통지에 갈음할 수 있습니다. 다만, 회원 본인의 거래와 관련하여 중대한 영향을 미치는 사항에 대하여는 개별통지를 합니다.
+
+제 4조(구매신청)
+1. “웅감” 이용자는 “웅감”사아에서 다음 또는 이와 유사한 방법에 의하여 구매를 신청하며, “웅감”은 이용자가 구매신청을 함에 있어서 다음의 각 내용을 알기 쉽게 제공하여야 합니다.
+2. “웅감”이 제3자에게 구매자 개인정보를 제공ㆍ위탁할 필요가 있는 경우 실제 구매신청 시 구매자의 동의를 받아야 하며, 회원가입 시 미리 포괄적으로 동의를 받지 않습니다. 이 때 “웅감”은 제공되는 개인정보 항목 제공받는 자, 제공받는 자의 개인정보 이용 목적 및 보유ㆍ이용 기간 등을 구매자에게 명시하여야 합니다. 다만 [정보통신망이용촉진 및 정보보호 등에 관한 법률] 제25조 제1항에 의한 개인정보 취급위탁의 경우 등 관련 법령에 달리 정함이 있는 경우에는 그에 따릅니다.
+
+제 5조(계약의 성립)
+1. “웅감”은 제9조와 같은 구매신청에 대하여 다음 각 호에 해당하면 승낙하지 않을 수 있습니다. 다만, 미성년자와 계약을 체결하는 경우에는 법정대리인의 동의를 얻지 못하면 미성년자 본인 또는 법정대리인이 계약을 취소할 수 있다는 내용을 고지하여야 합니다.
+2. “웅감”의 승낙이 제12조제1항의 수신확인통지형태로 이용자에게 도달한 시점에 계약이 성립한 것으로 봅니다.
+3. “웅감”의 승낙의 의사표시에는 이용자의 구매 신청에 대한 확인 및 판매가능 여부, 구매신청의 정정 취소 등에 관한 정보 등을 포함하여야 합니다.
+"
                     android:textColor="#95989A" />
             </ScrollView>
         </LinearLayout>
@@ -141,7 +226,7 @@
         <Button
             android:id="@+id/btn_next_consumer_terms"
             android:fontFamily="@font/nanum_bold"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_width="188dp"
             android:layout_height="48dp"
             android:layout_centerInParent="true"
