--- a/Woong_Android/app/src/main/res/layout/activity_join_map.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_join_map.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:fontFamily="@font/nanum_bold"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="현재 위치 검색"
             android:textColor="#1C2320"
             android:layout_centerHorizontal="true"
@@ -54,7 +54,7 @@
         android:layout_height="60dp"
         android:background="@color/colorPrimaryDark"
         android:fontFamily="@font/nanum_extrabold"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:text="이 주소로 지정하기"
         android:textColor="#FFFFFF"
         />
