--- a/Woong_Android/app/src/main/res/layout/activity_location_search.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_location_search.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nanum_extrabold"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textColor="#1C2320"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:fontFamily="@font/nanum_bold"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:hint="위치를 검색해주세요"
             android:textColor="#1C2320"
             android:background="@null"
@@ -65,7 +65,7 @@
 
         <TextView
             android:fontFamily="@font/nanum_bold"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#237A59"
