--- a/Woong_Android/app/src/main/res/layout/activity_review_write.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_review_write.xml
@@ -10,12 +10,15 @@
     <RelativeLayout
         android:id="@+id/top_payment"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="46dp">
         <TextView
+            android:fontFamily="@font/nanum_extrabold"
+            android:textSize="17dp"
+            android:textColor="#ADADAD"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="결제 페이지"/>
+            android:text="알림"/>
         <View
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
@@ -27,7 +30,10 @@
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
+            android:fontFamily="@font/nanumsquare_bold"
+            android:textSize="15sp"
+            android:layout_marginRight="15dp"
+            android:textColor="#237A59"
             android:text="등록하기"/>
     </RelativeLayout>
 
