--- a/Woong_Android/app/src/main/res/layout/fragment_notice_delireview.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_notice_delireview.xml
@@ -12,18 +12,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <RelativeLayout
-                android:layout_width="50dp"
-                android:layout_height="30dp">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
                 <TextView
                     android:layout_centerVertical="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="배송중"/>
+                    android:text="배송중"
+                    android:fontFamily="@font/nanum_extrabold"
+                    android:textColor="#707070"
+                    android:textSize="15sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginVertical="11dp"/>
 
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="0.5dp"
                 android:background="#bcbcbc"/>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_ing_deliver"
@@ -31,19 +36,24 @@
                 android:layout_height="match_parent"
                 android:nestedScrollingEnabled="false"/>
             <RelativeLayout
-                android:layout_width="90dp"
-                android:layout_height="30dp">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_centerVertical="true"
-
+                    android:fontFamily="@font/nanum_extrabold"
+                    android:textColor="#707070"
+                    android:textSize="15sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="11dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="배송완료"/>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="0.5dp"
                 android:background="#bcbcbc"/>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_done_deliver"
