--- a/Woong_Android/app/src/main/res/layout/fragment_notice_message.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_notice_message.xml
@@ -12,16 +12,22 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
             <RelativeLayout
-                android:layout_width="50dp"
-                android:layout_height="30dp">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="12dp"
+                android:paddingLeft="10dp">
                 <ImageView
                     android:layout_centerVertical="true"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:src="@color/colorPastel"/>
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/alarm_pick_message_new"/>
                 <TextView
+                    android:fontFamily="@font/nanum_extrabold"
+                    android:textSize="13sp"
+                    android:textColor="#237A59"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="25dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="NEW"/>
@@ -32,16 +38,22 @@
                 android:layout_height="match_parent"
                 android:nestedScrollingEnabled="false"/>
                 <RelativeLayout
-                    android:layout_width="90dp"
-                    android:layout_height="30dp">
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="12dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp">
                     <ImageView
                         android:layout_centerVertical="true"
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:background="@color/colorPastel"/>
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/alarm_message_read"/>
                     <TextView
+                        android:fontFamily="@font/nanum_extrabold"
+                        android:textSize="13sp"
+                        android:textColor="#237A59"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
+                        android:layout_marginLeft="25dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="읽은 메세지"/>
